opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/async_extended"
bug-reports: "https://github.com/janestreet/async_extended/issues"
dev-repo: "https://github.com/janestreet/async_extended.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "--only-packages" "async_extended" "--root" "." "-j" jobs "@install"]
]
depends: [
  "async"
  "async_find"
  "async_inotify"
  "async_interactive"
  "async_shell"
  "command_rpc"
  "core"
  "core_extended"
  "jbuilder"                {build & >= "1.0+beta2"}
  "ppx_driver"
  "ppx_jane"
  "textutils"
  "ocaml-migrate-parsetree" {>= "0.4"}
]
available: [ ocaml-version >= "4.03.0" ]
descr: "
Additional utilities for async

Async_extended is a collection of utilities for async. They don't
get the same level of review compared to other packages of the core
suite but they might still be useful.
"
